tests/this_ctor/this_ctor.exp
Error ------------------------------------------------------------ test.js:10:12

Cannot return `new this.constructor(...)` because `A` is incompatible with
number.

Error: test.js:10
 10:     return new this.constructor(this.n); // Error A ~> number
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot return `new this.constructor(...)` because `A` [1] is incompatible with number [2].
  References:
   10:     return new this.constructor(this.n); // Error A ~> number
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: `A`
    9:   badClone(): number {
                     ^^^^^^ [2]: number


Found 1 error
